--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tui = "0.17"
-crossterm = "0.22"
-inquire = "0.2.1"
 rand = "^0.8.4"
+native-windows-gui = "1.0.12"
+native-windows-derive = "1.0.3"
